# cookiecutter-fortran-app

./: .gitignore  .travis.yml  README.rst  cookiecutter.json  requirements.txt
tests/: test_template.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  README.rst
{{cookiecutter.project_slug}}/doc/doxygen/: Doxyfile
{{cookiecutter.project_slug}}/src/: main.f90
